k8s heml e cloud/k8s/Voll-med.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vollmed
  labels:
    app: vollmed
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vollmed
  template:
    metadata:
      labels:
        app: vollmed
    spec:
      containers:
      - name: vollmed-api
        image: leonardosartorello/vollmed:v8
        ports:
        - containerPort: 3000
