k8s heml e cloud/k8s/mysql.statefullset.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-vollmed
  labels:
    app: mysql-vollmed
spec:
  ports:
  - port: 3306
    name: mysql
  clusterIP: None
  selector:
    app: mysql-vollmed
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-vollmed
spec:
  selector:
    matchLabels:
      app: mysql-vollmed
  serviceName: "mysql-vollmed"
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: mysql-vollmed
    spec:
      terminationGracePeriodSeconds: 10
      volumes:
      - name: voll-med-mysql-ps
        persistentVolumeClaim:
          claimName: voll-med-mysql-pvc
      containers:
      - name: mysql-vollmed
        image: mysql:8
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: voll-med-mysql-ps
          mountPath: /var/lib/mysql
