k8s heml e cloud/k8s/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: voll-med-noldeport
spec:
  type: NodePort
  selector:
    app: vollmed
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30007
