k8s heml e cloud/k8s/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: vollmed-service
spec:
  selector:
    app: vollmed
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vollmed-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: vollmed.inovvati.corp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vollmed-service
                port:
                  number: 80
